--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,10 @@ packages = [{include = "to_do_app"}]
 python = "^3.10"
 django = "^4.1.7"
 djangorestframework = "^3.14.0"
-psycopg2-binary = "^2.9.5"
-django-cors-headers = "^3.14.0"
 python-dotenv = "^1.0.0"
+django-cors-headers = "^3.14.0"
+djoser = "^2.1.0"
+psycopg2-binary = "^2.9.5"
 
 
 [build-system]
